# Backgammon_AI

./: .gitignore  LISENCE  Log.odt  MANIFEST.in  README.md  pyproject.toml
ChatGPT/: explanation.txt  run.py
Code/: Main.py  Manual.py  Network.py
Code/AI_Agents/: Network_Type1.py  Network_Type2.py  Network_Type2_Data.db  Pick_Best_Pip.py
Code/Main_Files/: AI.py  Graphics.py  Logic.py  Views.py
Images/: Move - Copy.png~
Information & Planning/: Log.odt  Network Design.txt
Version 1/: Logic_v1.py  Mian_v1.py
Version 2/: AI_v2.py  Graphics_v2.py  Logic_v2.py  Main_v2.py
Version 2.1/: AI_v2_1.py  Graphics_v2_1.py  Logic_v2_1.py  Main_v2_1.py  Manual_v2_1.py  TreeSearchI.py
Version 2.2/: AI_v2_2.py  Graphics_v2_2.py  Logic_v2_2.py  Main_v2_2.py  Manual_v2_2.py  TreeSearchI.py  TreeSearchI_v2_2.py
Version 3/: AI_v3.py  Data.ods  Graphics_v3.py  Logic_v3.py  Main_v3.py  Manual_v3.py  Network_v3.py  TreeSearchI_v3.py  Views_v3.py  test.py
Version 3/AI_Agents/: Network_Type1_Data_v3.sqlite3  Network_Type1_v3.py  Pick_Best_Pip_v3.py  TreeSearchI_v3.py
Version 3/Data/: TestData1.sqlite3  TestData1.txt
Version 3/Main_Files/: AI_v3.py  Expirements.py  Graphics_v3.py  Logic_v3.py  Views_v3.py
src/willse_backgammon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  (+1 more)
v2/: Graphics.py  Logic.py  Logic_v2.py  Mian.py  Mian_v2.py
v3 (AI)/: AI_v3.py  Graphics_v3.py  Logic_v3.py  Main_v3.py  Mian_v3.py
v4 (AI)/: Flow.txt  Graphics.py  Graphics_v4.py  Logic.py  Logic_v4.py  Main_v4.py
version 1.5/: AI_v1_5.py  Logic_v1_5.py  Main_v1_5.py
(+33 files in other folders)
